--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Actividades</h2>
+            <ul>
+                <li>
+                    <a href="https://ajgutierrez.medium.com/una-arquitectura-de-software-moderna-a0ec77985d79" target="_blank">
+                        Caso Estudio U1
+                    </a>
+                </li>
+            </ul>
+        </section>
         
         <section id="herramientas">
             <h2>Herramientas</h2>
