--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <li>
                     <a href="https://ajgutierrez.medium.com/puente-digital-arquitectura-de-una-plataforma-de-aprendizaje-96c0e9ded3ba/" target="_blank">Puente</a>
                 </li>
+                <li>
+                    <a href="https://ajgutierrez.medium.com/la-evoluci%C3%B3n-del-sistema-bd10c07ee399" target="_blank">La evolución</a>
+                </li>
             </ul>
         </section>
         <section>
