--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li>
                     <a href="https://ajgutierrez.medium.com/la-evoluci%C3%B3n-del-sistema-bd10c07ee399" target="_blank">La evolución</a>
                 </li>
+                <li>
+                    <a href="https://ajgutierrez.medium.com/modelando-la-arquitectura-95c24d797927" target="_blank">Modelando</a>
+                </li>
             </ul>
         </section>
         <section>
