--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                         Caso Estudio U1
                     </a>
                 </li>
+                <li>
+                    <a href="https://ajgutierrez.medium.com/arquitectura-s%C3%B3lida-a4153e6904ae" target="_blank">Caso Estudio U2</a>
+                </li>
             </ul>
         </section>
         
